# Badger

./: .gitignore  Dockerfile  README.md  package.json  server.js  webpack.config.js
client/: open-search.xml  package-lock.json  package.json  webpack.config.js
client/components/account/: account.js  (+2 more)
client/css/: large.css
client/html/: header.html  home.html  welcome.html
client/images/: logo.xcf
client/js/: app.js  home.js  secrets.js  store.js  welcome.js
client/tests/: concealing.test.js  contractions.test.js  english.test.js
functions/enable-cards/: index.js  package.json
functions/midnight/: index.js  package.json
functions/performance/: index.js  package.json
scripts/: bash.sh  build.sh  certbot.sh  development.sh  node.sh  server.sh  startup-script.sh  static.sh
search/: BadgerSearch.cpp  BadgerSearch.hpp  CMakeLists.txt  Dockerfile  Search.cpp  Search.hpp  SearchService.cpp  SearchService.hpp  main.cpp
search/tests/: SearchTest.cpp
server/: package-lock.json  package.json
server/js/: account.mjs  cards.mjs  learn.mjs  main.mjs  revisions.mjs  search.mjs  secrets.mjs  session.mjs  tags.mjs  tasks.mjs  todos.mjs
server/tests/: tags.test.js
src/client/: app.js  store.js  welcome.js
src/css/: large.css
src/html/: home.html  index.html  welcome.html
src/js/: main.js  secrets.mjs  server.js  server.mjs  temp.js
src/server/: account.mjs  cards.mjs  main.mjs  search.mjs  session.mjs  tags.mjs
src/tests/: alternatives.test.js  concealing.test.js  contractions.test.js  english.test.js  examples.test.js  question.test.js  tags.test.js
(+171 files in other folders)
